--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext.versions = [
         'appCompat'          : '1.3.0',
         'coreAndroidx'       : '1.6.0',
-        'fragmentKtx'        : '1.2.0',
+        'fragmentKtx'        : '1.2.5',
         'constraintLayout'   : '2.0.4',
         'coordinatorLayout'  : '1.1.0',
         'material'           : '1.4.0',
@@ -10,6 +10,7 @@ ext.versions = [
         'lifecycleExtensions': '2.2.0',
 
         'retrofit'          : '2.9.0',
+        'okhttp'            : '4.9.0',
         'recyclerView'      : '1.1.0',
         'glide'             : '4.11.0'
 ]
